--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "antd": "^5.8.6",
+    "axios": "^1.6.0",
     "bootstrap": "^5.3.1",
     "chart.js": "^4.4.0",
     "node-sass": "^9.0.0",
@@ -18,6 +19,7 @@
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "recharts": "^2.10.3",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
